@@ -1,3 +1,4 @@
+* Allow to store wizard size
 * Add reset default on fields
 * Store in config default width and height of main window
 * Added arrow navigation if supported by gtk
